--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 </address>
         </section>
         <section>
-            <img src="img/map.jpg" title="image of the Kea restaurant from above" alt="image of the Kea restaurant from above">
+            <img src="img/map.jpg" alt="image of the Kea restaurant from above">
         </section>
         <section>
            <fieldset>
