--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </ul>
       </section>
       <section>
-        <img src="img/kea_restaurant.jpg" alt="" />
+        <img src="img/kea_restaurant.jpg" alt="Picture of the KEA Restaurant" />
 
         <blockquote>
           Dining at Restaurant KEA has truly been one of the greatest
