--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
                     <br>
                     65 kr.
                 </p>
-                <img src="img/salad.jpg" title="Orignal Toni's Salad" alt="">
+                <img src="img/salad.jpg" alt="Orignal Toni's Salad">
             </article>
             <article>
                 <h2>
@@ -39,7 +39,7 @@ Tomato, mozzarella, pepperoni and rucula. Choose between our thin or thick bread
                     <br>
                    80 kr.
                 </p>
-                <img src="img/pizza.jpg" title="Award winning pizza" alt="">
+                <img src="img/pizza.jpg" alt="Award winning pizza">
             </article>
             <article>
                 <h2>
@@ -50,7 +50,7 @@ High quality meat, lettuce, tomato, onion, bacon, cheese, jalapños and a lot of
                     <br>
                     115 kr.
                 </p>
-                <img src="img/burger.jpg" title="One of the best burgers you'll ever have" alt="">
+                <img src="img/burger.jpg" alt="One of the best burgers you'll ever have">
             </article>
             <article>
                 <h2>
@@ -60,7 +60,7 @@ High quality meat, lettuce, tomato, onion, bacon, cheese, jalapños and a lot of
 Delightful strawberry icecream topped with actual strawberries. In cone or vase. Multiple toppings available.                    <br>
                     65 kr.
                 </p>
-                <img src="" title="Should be an image of the dish" alt="">
+                <img src="/IneverGotAPhoto" alt="Should be an image of the dish">
             </article>
 
         </section>
